--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babylonjs": "^3.2.0",
     "babylonjs-gui": "^3.2.0",
     "babylonjs-loaders": "^3.2.0",
