--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "sourceMap": true,
     "noImplicitAny": false,
     "module": "commonjs",
+    "experimentalDecorators" : true,
     "target": "es5",
     "jsx": "react",
     "allowJs": true,
